apps/zen-timer/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zen-timer
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: zen-timer.skravops.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zen-timer
                port:
                  number: 80
